--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ui</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/5e35d0c07c.js" crossorigin="anonymous"></script>
